--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,30 @@ body {
     background-color: #FAF9F6;
 }
 
+:root {
+  --header-height: 3.5rem;
+  --first-color: hsl(28, 88%, 62%);
+  --title-color: hsl(0, 0%, 95%);
+  --text-color: hsl(0, 0%, 75%);
+  --body-color: hsl(0, 0%, 6%);
+  --body-font: "Mulish";
+  --second-font: "Dancing Script", cursive;
+  --h2-font-size: 1.25rem;
+  --small-font-size: 0.813rem;
+  --font-semi-bold: 600;
+  --z-tooltip: 10;
+  --z-fixed: 100;
+ }
+
+ ul {
+  list-style: none;
+ }
+ 
+ a {
+  text-decoration: none;
+ }
+ 
+
 * {
   margin: 0;
   padding: 0;
